registration deadline change

--- a/colorstations.html
+++ b/colorstations.html
@@ -19,34 +19,32 @@
 
 				<!-- Header -->
 				<header id="header">
-			    <h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
-			    <nav id="nav">
-			      <ul>
-			        <li class="special">
-			          <a href="#menu" class="menuToggle"><span>Menu</span></a>
-			          <div id="menu">
-			            <ul>
-			              <li><a href="index.html">Home</a></li>
-			              <li><a href="event.html">Event Details</a></li>
-			              <li><a href="event.html#faq">FAQ</a></li>
-			              <li><a href="colorstations.html">About the Honorees</a></li>
-			              <!-- <li><a href="about.html">About Us</a></li> -->
-			              <li><a href="sponsors.html">Our Sponsors</a></li>
-			              <li><a href="contact.html">Contact Us</a></li>
+          <h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
+          <nav id="nav">
+            <ul>
+              <li class="special">
+                <a href="#menu" class="menuToggle"><span>Menu</span></a>
+                <div id="menu">
+                  <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="event.html">Event Details & Registration</a></li>
+                    <li><a href="event.html#faq">FAQ</a></li>
+                    <li><a href="colorstations.html">About the Honorees</a></li>
+                    <!-- <li><a href="about.html">About Us</a></li> -->
+                    <li><a href="sponsors.html">Our Sponsors</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+                </div>
+              </li>
+            </ul>
+          </nav>
 
-			              <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li> <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
-			            </ul>
-			          </div>
-			        </li>
-			      </ul>
-			    </nav>
-
-			  </header>
+        </header>
 
 					<section id="banner">
 						<div class="inner">
-							<h2>In honor of...</h2>
-							<p>This year, we're honoring 4 former Mason students <br>that were affected by Leukemia and Lymphoma <br>by dedicating each student a color station.</p>
+							<!-- <h2>In honor of...</h2> -->
+							<p>We're honoring 4 Mason students <br>who were impacted by leukemia or lymphoma.</p>
 
 						</div>
 						<a href="#two" class="more scrolly">Read their stories</a>
@@ -58,7 +56,7 @@
 						<div class="image"><img src="images/honor/Blue - Maya Collins copy.jpg" alt="" /></div>
 						<div class="content">
 							<h3 class ="honortitle">Blue Station: Maya Collins</h3>
-							<p>Maya was diagnosed with Acute Myeloid Leukemia (AML) in 2011 when she was 7 years old.  She had her first bone marrow transplant in September of 2011 and went into remission.  In May of 2012 she relapsed and needed a second transplant.  Both of these required 6 months stays in Cincinnati Children’s Hospital.  All was then wonderful for 4 years until June of 2016 when she learned that her cancer had once again come back.  In August of 2016 Maya and her mom traveled to St. Jude, in Memphis, so Maya could receive a third transplant as part of a clinical trial.  Unfortunately, Maya never fully recovered, and on October 3, 2017 Maya passed away due to complications from her treatment.  Maya was the strongest, bravest girl there is; her fight was inspirational.
+							<p>Maya was diagnosed with Acute Myeloid Leukemia (AML) in 2011 when she was 7 years old.  She had her first bone marrow transplant in September of 2011 and went into remission.  In May of 2012, she relapsed and needed a second transplant.  Both of these required 6 months stays in Cincinnati Children’s Hospital.  All was then wonderful for 4 years until June of 2016 when she learned that her cancer had once again come back.  In August of 2016 Maya and her mom traveled to St. Jude, in Memphis, so Maya could receive a third transplant as part of a clinical trial.  Unfortunately, Maya never fully recovered, and on October 3, 2017 Maya passed away due to complications from her treatment.  Maya was the strongest, bravest girl there is; her fight was inspirational.
 							</p>
 						</div>
 					</section>
@@ -66,34 +64,28 @@
 						<div class="image"><img src="images/honor/green-ella.jpeg" alt="" /></div>
 						<div class="content">
 							<h3 class ="honortitle">Green Station: Ella Boynton</h3>
-							<p>Ella was diagnosed with Acute Lymphoblastic Leukemia (ALL) in May 2013, one week before her second birthday. Throughout her treatment of 26 months, Ella endured several bone marrow aspirations, many spinal taps, blood and platelet transfusions, numerous hospital stays, and a variety of chemotherapy and other medications. Through it all, Ella was a brave and strong little girl. She went into remission soon after starting her treatment and continues to be in remission. She now gets her blood count checked every 6 months and is proud to be a survivor! Ella is in the second grade at MECC and loves to read, swim, and play the piano.  </p>
+							<p>Ella was diagnosed with Acute Lymphoblastic Leukemia (ALL) in May 2013, one week before her second birthday. Throughout her 26 month treatment, Ella endured several bone marrow aspirations, many spinal taps, blood and platelet transfusions, numerous hospital stays, and a variety of chemotherapy and other medications. Through it all, Ella was a brave and strong little girl. She went into remission soon after starting her treatment and continues to be in remission. She now gets her blood count checked every 6 months and is proud to be a survivor! Ella is in the second grade at MECC and loves to read, swim, and play the piano.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/honor/red-ben.JPG" alt="" /></div>
 						<div class="content">
 							<h3 class ="honortitle">Red Station: Ben Terribilini</h3>
-							<p>Ben Terribilini was in 6th grade at Mason Intermediate when he started feeling sick. He just couldn't shake his cold symptoms. Then one day he woke up with a weird rash on his arm and back, so his mom took him to the doctor. It turned out that the rash was really bruising from his sheets - his blood cells were going crazy and making him bruise incredibly easy. Blood tests showed he had T-cell Acute Lymphoblastic Leukemia (ALL).He went to the hospital that day and stayed there almost every day for the next 6 months. </p>
-
-								<p>Ben had 2 rounds of chemotherapy which made him lose his hair, gain weight, have bad mood swings, be violently ill, and still didn't get rid of the Leukemia. It was decided that his best option was to get a bone marrow transplant. Luckily his oldest brother Josh was a perfect match.
-								</p>
-								<p>
-								To prepare for the transplant, Ben had to go through huge doses of chemo and total body irradiation, which made him extremely sick and unable to eat. The actual transplant was easy, like a blood transfusion. It took a couple of weeks to see if the stem cells from his brother were working though. Meanwhile Ben was the sickest he's ever been. Eventually, he started improving and was well enough to go home. Now it's been 3 1/2 years since his bone marrow transplant and he hasn't had to spend another night in the hospital, which amazes his doctors. He's doing great! </p>
+							<p>
+								Ben Terribilini was in 6th grade at Mason Intermediate when he started feeling sick. He just couldn't shake his cold symptoms. Then one day he woke up with a weird rash on his arm and back, so his mom took him to the doctor. It turned out that the rash was really bruising from his sheets - his blood cells were going crazy and making him bruise incredibly easy. Blood tests showed he had T-cell Acute Lymphoblastic Leukemia (ALL). He went to the hospital that day and stayed there almost every day for the next 6 months.
+								Ben had two rounds of chemotherapy which made him lose his hair, gain weight, have bad mood swings, be violently ill, and still didn't get rid of the Leukemia. It was decided that his best option was to get a bone marrow transplant. Luckily his oldest brother Josh was a perfect match.
+								To prepare for the transplant, Ben had to go through huge doses of chemo and total body irradiation, which made him extremely sick and unable to eat. The actual transplant was easy, like a blood transfusion. It took a couple of weeks to see if the stem cells from his brother were working though. Meanwhile Ben was the sickest he's ever been. Eventually, he started improving and was well enough to go home. Now it's been 3.5 years since his bone marrow transplant and he hasn't had to spend another night in the hospital, which amazes his doctors. He's doing great!
+							</p>
 							</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/honor/Maeryn.jpg" alt="" /></div>
 						<div class="content">
 							<h3 class ="honortitle">Yellow Station: Maeryn Kelly</h3>
-							<p>On Father’s Day 2016, Maeryn had been playing with some neighbor kids and got hit in the knee pretty hard.  She went to urgent care, they did x-rays and suspected a fracture to immobilized her leg.  The next day, we took her to an orthopaedist, who reviewed the films, did NOT see a fracture, but told us to continue working with the physical therapist because Osgood-Slatter did seem probable.
-
-	After several weeks of PT, with no improvement and continued pain, we went for a second ortho consult.  It was then that we were referred directly to Cincinnati Children’s for probable leukemia.  We would not leave the hospital for 37 days.
-
-	Maeryn has received exceptional care.  From the moment we started treating her cancer, we immediately saw improvement.  She began walking without crutches within the first week.  Since you can’t SEE cancer, it’s hard to believe your child has it until you see the treatment start to really work.  But she’s definitely beating it!
-
-	She’s tolerated the chemo really well, for the most part.  She’s experienced minimal nausea and pain.  And we’ve been well prepared for possible side effects so I don’t feel like anything has really shocked us, which is awesome.  After all, hearing cancer was a big enough shock.
-
-The support we’ve had from the hospital, school, friends, family and the community has been astounding.  I keep saying, this isn’t a club I ever wanted to or thought I’d join, but now that I’m here, I realize how big the club is.  And they give great big hugs right when you need them! </p>
+							<p>
+								On Father’s Day 2016, Maeryn was playing with some neighbor kids and got hit in the knee pretty hard. She got x-rays at urgent care and suspected a fracture that immobilized her leg. The next day, her family took her to an orthopaedist who reviewed the films, did NOT see a fracture, but told her to continue working with the physical therapist because Osgood-Slatter did seem probable. After several weeks of PT with no improvement and continued pain, Maeryn went for a second ortho consult, where she was referred directly to Cincinnati Children’s for suspected leukemia. They did not leave the hospital for 37 days. Maeryn has received exceptional care. Her family saw improvement immediately from the moment Maeryn started cancer treatment. She began walking without crutches within the first week. Her mother says that since you can’t SEE cancer, it was hard for her to believe that her daughter had it until she started to see the treatment really work. Maeryn is definitely beating it! She’s tolerated the chemo really well, for the most part. She’s experienced minimal nausea and pain. Her family has been well prepared for possible side effects so they haven't felt like anything has really shocked them. After all, hearing cancer was a big enough shock. The support they've had from the hospital, school, friends, family and the community has been astounding. Her mother says that the Leukemia and Lymphoma Society is was never a club she ever thought she'd join, but now that she's here, she realizes how big the club is "and they give great big hugs right when you need them"!
+							</p>
 						</div>
 					</section>
 				</section>
@@ -102,11 +94,11 @@ The support we’ve had from the hospital, school, friends, family and the commu
 			  <section id="cta" class="wrapper style4">
 			    <div class="inner">
 			      <header>
-			        <h2>Register by Friday 10/26 for a free t-shirt</h2>
+			        <h2>Early registration has been extended! Register by Sunday 10/28 for a free t-shirt.</h2>
 			      </header>
 			      <ul class="actions vertical">
-			        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li> <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
-			        <!--<li><a href="event.html" class="button fit special">Learn more</a></li> -->
+			        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
+			        <li><a href="event.html" class="button fit">Event Details</a></li>
 			      </ul>
 			    </div>
 			  </section>
