--- a/contact.html
+++ b/contact.html
@@ -26,18 +26,13 @@
 						<div id="menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="event.html">Event Details</a></li>
+								<li><a href="event.html">Event Details & Registration</a></li>
 								<li><a href="event.html#faq">FAQ</a></li>
-<li><a href="colorstations.html">About the Honorees</a></li>
+								<li><a href="colorstations.html">About the Honorees</a></li>
 								<!-- <li><a href="about.html">About Us</a></li> -->
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
-
-								<li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li> <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
-
-
-
-							</ul>
+						</ul>
 						</div>
 					</li>
 				</ul>
@@ -65,27 +60,25 @@
 	  <section id="cta" class="wrapper style4">
 	    <div class="inner">
 	      <header>
-	        <h2>Register by Friday 10/26 for a free t-shirt</h2>
+	        <h2>Early registration has been extended! Register by Sunday 10/28 for a free t-shirt.</h2>
 	      </header>
 	      <ul class="actions vertical">
-	        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li> <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
-	        <!-- <li><a href="event.html" class="button fit special">Learn more</a></li>
+	        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
+	        <li><a href="event.html" class="button fit">Event Details</a></li>
 	      </ul>
 	    </div>
 	  </section>
-		<!- Footer -->
-		<!--<footer id="footer">
-			<ul class="icons">
-				<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-			</ul>
-			<ul class="copyright">
-				<li>Color 4 a cure 5k</li>
-				<li>Mason High School National Honor Society</li>
-			</ul>
-		</footer>
-
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>Color 4 a cure 5k</li><li>Mason High School National Honor Society</li>
+				</ul>
+			</footer>
 	</div>
 
 	<!-- Scripts -->
