--- a/event.html
+++ b/event.html
@@ -26,15 +26,13 @@
           <div id="menu">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="event.html">Event Details</a></li>
+              <li><a href="event.html">Event Details & Registration</a></li>
               <li><a href="event.html#faq">FAQ</a></li>
               <li><a href="colorstations.html">About the Honorees</a></li>
               <!-- <li><a href="about.html">About Us</a></li> -->
               <li><a href="sponsors.html">Our Sponsors</a></li>
               <li><a href="contact.html">Contact Us</a></li>
-
-              <!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
-            </ul>
+          </ul>
           </div>
         </li>
       </ul>
@@ -51,9 +49,9 @@
       <div class="inner">
         <section>
           <div class="row">
-
+            <h3 style="color:darkorange">The Early Registration deadline (with a free long-sleeve shirt) has been extended to midnight on Sunday 10/28!</h3>
             <div class="6u 12u$(medium)">
-              <header>
+            <header>
               <h5>Schedule</h5>
             </header>
               <div class="table-wrapper">
@@ -102,15 +100,14 @@
               </ul>
               <h5>Pricing</h5>
               <ul class="alt">
-                <li>10/16 - 10/26 (11:59 PM) Early Registration:      $25 with t-shirt</li>
-                <li>10/27 - 11/9 (11:59 PM) Regular Registration:     $25 no t-shirt</li>
+                <li>10/16 - 10/28 (11:59 PM) Early Registration:      $25 with t-shirt</li>
+                <li>10/29 - 11/9 (11:59 PM) Regular Registration:     $25 no t-shirt</li>
                 <li>11/10 Day-of Registration: $30 no t-shirt</li>
                 <li><i>Children 3 and under: free</i></li>
                 <a href="https://www.locallevelevents.com/events/details/5935" class="button fit special">Register</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div>
               </ul>
                 <br><br>
 
-              <!-- <a href="https://www.locallevelevents.com/events/details/3828" class="button fit special disabled">Check back later for Registration</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div> -->
           </div>
         </section>
 
@@ -187,11 +184,11 @@
   <section id="cta" class="wrapper style4">
     <div class="inner">
       <header>
-        <h2>Register by Friday 10/26 for a free t-shirt</h2>
+        <h2>Early registration has been extended! Register by Sunday 10/28 for a free t-shirt.</h2>
       </header>
       <ul class="actions vertical">
-        <!-- <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li> -->
         <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
+        <li><a href="event.html" class="button fit">Event Details</a></li>
       </ul>
     </div>
   </section>
