--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
 						<div id="menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="event.html">Event Details</a></li>
+								<li><a href="event.html">Event Details & Registration</a></li>
 								<li><a href="event.html#faq">FAQ</a></li>
-<li><a href="colorstations.html">About the Honorees</a></li>
+								<li><a href="colorstations.html">About the Honorees</a></li>
 								<!-- <li><a href="about.html">About Us</a></li> -->
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
-
-								<!-- <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li> -->
-							</ul>
+						</ul>
 						</div>
 					</li>
 				</ul>
