team room to small commons

--- a/event.html
+++ b/event.html
@@ -59,7 +59,7 @@
                   <tbody>
                     <tr>
                       <td>12:00-12:30 PM</td>
-                      <td>Check-in begins in Team Room</td>
+                      <td>Check-in begins in Small Commons</td>
                     </tr>
                     <tr>
                       <td>12:45 PM</td>
@@ -85,7 +85,7 @@
                 </table>
                 <h5>Race Day</h5>
                 <ul class="alt">
-                  <li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Team Room</a> (6100 S Mason Montgomery Rd)</li>
+                  <li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Small Commons</a> (6100 S Mason Montgomery Rd)</li>
                 </ul>
                 <h5>Course Map</h5>
                 <img src="images/2018course.jpg" alt="course" width="100%"> </div>
