add shirt mockup

--- a/event.html
+++ b/event.html
@@ -49,8 +49,15 @@
       <div class="inner">
         <section>
           <div class="row">
-            <h3 style="color:darkorange">The Early Registration deadline (with a free long-sleeve shirt) has been extended to midnight on Sunday 10/28!</h3>
+            <h3 style="color:darkorange">The Early Registration deadline to receive a free long sleeve shirt has been extended to midnight on Sunday 10/28</h3>
             <div class="6u 12u$(medium)">
+              <h5>Color 4 A Cure 5K</h5>
+              <ul class="alt">
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
+                <li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday November 10, 2018 at 1 PM </li>
+                <li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Leukemia and Lymphoma Society through Mason National Honor Society.<br>
+                  <a href="colorstations.html">Learn more about our color station honorees...</a></li>
+              </ul>
             <header>
               <h5>Schedule</h5>
             </header>
@@ -91,29 +98,23 @@
                 <img src="images/2018course.jpg" alt="course" width="100%"> </div>
             </div>
             <div class="6u$ 12u$(medium)">
-              <h5>Color 4 A Cure 5K</h5>
-              <ul class="alt">
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday November 10, 2018 at 1 PM </li>
-                <li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Leukemia and Lymphoma Society through Mason National Honor Society.<br>
-                  <a href="colorstations.html">Learn more about our color station honorees...</a></li>
-              </ul>
+              <a href="https://www.locallevelevents.com/events/details/5935" class="button fit special">Register</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a>
+
               <h5>Pricing</h5>
               <ul class="alt">
-                <li>10/16 - 10/28 (11:59 PM) Early Registration:      $25 with t-shirt</li>
-                <li>10/29 - 11/9 (11:59 PM) Regular Registration:     $25 no t-shirt</li>
-                <li>11/10 Day-of Registration: $30 no t-shirt</li>
+                <li>10/16 - 10/28 (11:59 PM) Early Registration:      $25 with long sleeve shirt</li>
+                <li>10/29 - 11/9 (11:59 PM) Regular Registration:     $25 no long sleeve shirt</li>
+                <li>11/10 Day-of Registration: $30 no shirt</li>
                 <li><i>Children 3 and under: free</i></li>
-                <a href="https://www.locallevelevents.com/events/details/5935" class="button fit special">Register</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a> </div>
               </ul>
-                <br><br>
+              <h5>Long Sleeve Shirt Design</h5>
+              <img src="images/Shirt Mockup.png" alt="shirt" width="100%"> </div>
 
           </div>
         </section>
 
         <!--FAQ-->
-        <br>
-        <br>
+        <br><br><br><br><br>
         <header>
           <h2><a name="faq" id="faq">Frequently Asked Questions</a></h2>
           <div id="accordion" role="tablist">
@@ -184,7 +185,7 @@
   <section id="cta" class="wrapper style4">
     <div class="inner">
       <header>
-        <h2>Early registration has been extended! Register by Sunday 10/28 for a free t-shirt.</h2>
+        <h2>Early registration has been extended! Register by Sunday 10/28 for a free long sleeve shirt.</h2>
       </header>
       <ul class="actions vertical">
         <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
