--- a/colorstations.html
+++ b/colorstations.html
@@ -91,10 +91,10 @@
 				</section>
 
 				<!-- CTA -->
-			  <section id="cta" class="wrapper style4">
+				<section id="cta" class="wrapper style4">
 			    <div class="inner">
 			      <header>
-			        <h2>Early registration has been extended! Register by Sunday 10/28 for a free t-shirt.</h2>
+			        <h2>Early registration has been extended! Register by Sunday 10/28 for a free long sleeve shirt.</h2>
 			      </header>
 			      <ul class="actions vertical">
 			        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
