Update registration deadline

--- a/contact.html
+++ b/contact.html
@@ -57,10 +57,10 @@
 		</article>
 
 		<!-- CTA -->
-		<section id="cta" class="wrapper style4">
+	  <section id="cta" class="wrapper style4">
 	    <div class="inner">
 	      <header>
-	        <h2>Early registration has been extended! Register by Sunday 10/28 for a free long sleeve shirt.</h2>
+	        <h2>Register by Midnight 11/9 to save $5 from registration at the door!</h2>
 	      </header>
 	      <ul class="actions vertical">
 	        <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
