--- a/event.html
+++ b/event.html
@@ -49,7 +49,6 @@
       <div class="inner">
         <section>
           <div class="row">
-            <h3 style="color:darkorange">The Early Registration deadline to receive a free long sleeve shirt has been extended to midnight on Sunday 10/28</h3>
             <div class="6u 12u$(medium)">
               <h5>Color 4 A Cure 5K</h5>
               <ul class="alt">
@@ -185,7 +184,7 @@
   <section id="cta" class="wrapper style4">
     <div class="inner">
       <header>
-        <h2>Early registration has been extended! Register by Sunday 10/28 for a free long sleeve shirt.</h2>
+        <h2>Register by Midnight 11/9 to save $5 from registration at the door!</h2>
       </header>
       <ul class="actions vertical">
         <li><a href=https://www.locallevelevents.com/events/details/5935 class="button fit special">REGISTER</a></li>
