fixing widths new map

--- a/event.html
+++ b/event.html
@@ -93,9 +93,9 @@
                 <ul class="alt">
                   <li>Bring your printed <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target="_blank" href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Small Commons</a> (6100 S Mason Montgomery Rd)</li>
                 </ul>
-                <h5>Course Map</h5>
-                <iframe src="https://www.google.com/maps/d/embed?mid=1QsrIsK-wHcV_P8kMKVFPc-RREEwkW6sj" width="640" height="480"></iframe>
-                <!-- <img src="images/2018course.jpg" alt="course" width="100%"> </div> -->
+
+                <!-- <img src="images/2018course.jpg" alt="course" width="100%"> -->
+                </div>
             </div>
             <div class="6u$ 12u$(medium)">
               <a href="https://www.locallevelevents.com/events/details/5935" class="button fit special">Register</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a> <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a>
@@ -114,8 +114,12 @@
         </section>
 
         <!--FAQ-->
-        <br><br><br><br><br>
+        <br><br><br>
         <header>
+          <h5>Course Map</h5>
+          <iframe src="https://www.google.com/maps/d/embed?mid=1QsrIsK-wHcV_P8kMKVFPc-RREEwkW6sj" width="100%" height="480"></iframe>
+          <br><br><br>
+
           <h2><a name="faq" id="faq">Frequently Asked Questions</a></h2>
           <div id="accordion" role="tablist">
             <div class="card">
