--- a/event.html
+++ b/event.html
@@ -27,6 +27,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="event.html">Event Details & Registration</a></li>
+              <li><a href="map.html">Course & Volunteer Map</a></li>
               <li><a href="event.html#faq">FAQ</a></li>
               <li><a href="colorstations.html">About the Honorees</a></li>
               <!-- <li><a href="about.html">About Us</a></li> -->
