--- a/index.html
+++ b/index.html
@@ -19,27 +19,28 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
-			<nav id="nav">
-				<ul>
-					<li class="special">
-						<a href="#menu" class="menuToggle"><span>Menu</span></a>
-						<div id="menu">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="event.html">Event Details & Registration</a></li>
-								<li><a href="event.html#faq">FAQ</a></li>
-								<li><a href="colorstations.html">About the Honorees</a></li>
-								<!-- <li><a href="about.html">About Us</a></li> -->
-								<li><a href="sponsors.html">Our Sponsors</a></li>
-								<li><a href="contact.html">Contact Us</a></li>
-						</ul>
-						</div>
-					</li>
-				</ul>
-			</nav>
+	    <h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
+	    <nav id="nav">
+	      <ul>
+	        <li class="special">
+	          <a href="#menu" class="menuToggle"><span>Menu</span></a>
+	          <div id="menu">
+	            <ul>
+	              <li><a href="index.html">Home</a></li>
+	              <li><a href="event.html">Event Details & Registration</a></li>
+	              <li><a href="map.html">Course & Volunteer Map</a></li>
+	              <li><a href="event.html#faq">FAQ</a></li>
+	              <li><a href="colorstations.html">About the Honorees</a></li>
+	              <!-- <li><a href="about.html">About Us</a></li> -->
+	              <li><a href="sponsors.html">Our Sponsors</a></li>
+	              <li><a href="contact.html">Contact Us</a></li>
+	          </ul>
+	          </div>
+	        </li>
+	      </ul>
+	    </nav>
 
-		</header>
+	  </header>
 
 		<!-- Banner -->
 		<section id="banner">
