--- a/sponsors.html
+++ b/sponsors.html
@@ -27,12 +27,13 @@
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="event.html">Event Details & Registration</a></li>
+                <li><a href="map.html">Course & Volunteer Map</a></li>
                 <li><a href="event.html#faq">FAQ</a></li>
                 <li><a href="colorstations.html">About the Honorees</a></li>
                 <!-- <li><a href="about.html">About Us</a></li> -->
                 <li><a href="sponsors.html">Our Sponsors</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-              </ul>
+            </ul>
             </div>
           </li>
         </ul>
